gallery component working with image intersect imported

--- a/src/projects.json
+++ b/src/projects.json
@@ -10,20 +10,20 @@
       "hero":"",
       "images": [
         {
-          "url":"https://via.placeholder/150",
+          "url":"https://loremflickr.com/640/360",
           "alt":"Placeholder Image",
           "description":"This is a description"
         },
         {
-          "url":"https://via.placeholder/150",
+          "url":"https://loremflickr.com/640/360",
           "alt":"Placeholder Image"
         },
         {
-          "url":"https://via.placeholder/150",
+          "url":"https://loremflickr.com/640/360",
           "alt":"Placeholder Image"
         },
         {
-          "url":"https://via.placeholder/150",
+          "url":"https://loremflickr.com/640/360",
           "alt":"Placeholder Image"
         }
       ]
@@ -33,19 +33,19 @@
       "title":"My Third Project",
       "images": [
         {
-          "url":"https://via.placeholder/150",
+          "url":"https://loremflickr.com/640/360",
           "alt":"Placeholder Image"
         },
         {
-          "url":"https://via.placeholder/150",
+          "url":"https://loremflickr.com/640/360",
           "alt":"Placeholder Image"
         },
         {
-          "url":"https://via.placeholder/150",
+          "url":"https://loremflickr.com/640/360",
           "alt":"Placeholder Image"
         },
         {
-          "url":"https://via.placeholder/150",
+          "url":"https://loremflickr.com/640/360",
           "alt":"Placeholder Image"
         }
       ]
@@ -55,19 +55,19 @@
       "title":"My Fourth Project",
       "images": [
         {
-          "url":"https://via.placeholder/150",
+          "url":"https://loremflickr.com/640/360",
           "alt":"Placeholder Image"
         },
         {
-          "url":"https://via.placeholder/150",
+          "url":"https://loremflickr.com/640/360",
           "alt":"Placeholder Image"
         },
         {
-          "url":"https://via.placeholder/150",
+          "url":"https://loremflickr.com/640/360",
           "alt":"Placeholder Image"
         },
         {
-          "url":"https://via.placeholder/150",
+          "url":"https://loremflickr.com/640/360",
           "alt":"Placeholder Image"
         }
       ]
@@ -77,19 +77,19 @@
       "title":"My Fifth Project",
       "images": [
         {
-          "url":"https://via.placeholder/150",
+          "url":"https://loremflickr.com/640/360",
           "alt":"Placeholder Image"
         },
         {
-          "url":"https://via.placeholder/150",
+          "url":"https://loremflickr.com/640/360",
           "alt":"Placeholder Image"
         },
         {
-          "url":"https://via.placeholder/150",
+          "url":"https://loremflickr.com/640/360",
           "alt":"Placeholder Image"
         },
         {
-          "url":"https://via.placeholder/150",
+          "url":"https://loremflickr.com/640/360",
           "alt":"Placeholder Image"
         }
       ]
